Make a beakerlib role that executes multiple tests

--- a/tests/roles/cloud/tasks/main.yml
+++ b/tests/roles/cloud/tasks/main.yml
@@ -8,5 +8,5 @@
 - name: Run the local playbook in a launched instance
   qemu_playbook:
     subjects: "{{subjects}}"
-    playbook: "{{tests}}"
+    playbooks: "{{playbooks}}"
     log: "{{artifacts}}/machine.log"
