--- a/tests/test_local.yml
+++ b/tests/test_local.yml
@@ -1,46 +1,5 @@
 ---
 # This first play always runs on the local staging system
 - hosts: localhost
-  connection: local
-  tasks:
-  - name: Install the requirements
-    package: name={{item}} state=latest
-    with_items:
-    - beakerlib
-
-# When a staged system is involved then this play runs there
-- hosts: localhost
-  vars:
-    artifacts: ./artifacts
-  tasks:
-  - block:
-    - name: Put beakerlib library on the target
-      copy:
-        src: /usr/share/beakerlib
-        dest: /usr/local/lib
-
-    - name: Put beakerlib binaries on the target
-      copy:
-        src: "{{item}}"
-        dest: /usr/local/bin
-        mode: 755
-      with_fileglob:
-        - "/usr/bin/beakerlib-*"
-
-    - name: Copy tests to target
-      copy:
-        src: ./
-        dest: /usr/local/bin/
-
-    - name: Execute test-passwd
-      shell: /bin/sh -e /usr/local/bin/test-passwd 1>/tmp/test.log 2>&1
-
-    - name: Check the results
-      shell: "if grep ' FAIL ' /tmp/test.log; then exit 1; else exit 0; fi"
-
-    always:
-    - name: Pull out the logs
-      fetch:
-        dest: "{{artifacts}}/"
-        src: /tmp/test.log
-        flat: yes
+  roles:
+  - { role: beakerlib, tests: [ test-passwd ] }
