--- a/tests/test_rpm.yml
+++ b/tests/test_rpm.yml
@@ -2,7 +2,6 @@
 - hosts: localhost
   vars:
     artifacts: ./artifacts
-    tests: ./test_local.yml
   vars_prompt:
   - name: subjects
     prompt: "RPM test subject(s)"
@@ -11,3 +10,4 @@
   roles:
   - rpm
 
+- include: "test_local.yml"
