update and cleanup example by using standard-test-roles package

--- a/tests/test_local.yml
+++ b/tests/test_local.yml
@@ -2,4 +2,7 @@
 # This first play always runs on the local staging system
 - hosts: localhost
   roles:
-  - { role: beakerlib, tests: [ test-passwd ] }
+  - role: standard-test-beakerlib
+    tests:
+    - test-passwd
+
